# cphstats

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README  README.md  acfca.cpin  cloptions.cpp  cloptions.h  config.h  configure  conprob.cpp  conprob.h  constants.h  cpin.cpp  cpin.h  cpout.cpp  cpout.h  depends  exceptions.h  main.cpp  parse_cpin.F90  prottraj.cpp  prottraj.h  string_manip.cpp  string_manip.h  test.cpp  test.h  travis_build.sh  types.h  utilities.cpp
test/: chunk.dat.save  chunk_deprot.dat.save  chunk_pka.dat.save  conditional.dat.save  conditional_chunks.dat.save  cphstats_output.txt.save  cumulative.dat.save  cumulative_deprot.dat.save  cumulative_pka.dat.save  md2_cpout.pH_2.00.save  md3_cpout.pH_4.50.save  md5_cpout.pH_5.00.save  pH_2.00.calcpka.save  pH_2.50.calcpka.save  pH_3.00.calcpka.save  pH_3.50.calcpka.save  pH_4.00.calcpka.save  pH_5.00.calcpka.save  pH_5.50.calcpka.save  pH_6.50.calcpka.save  pH_7.50.calcpka.save  pop.dat.save  running_avg.dat.save  running_avgs.dat.save  running_pKa.dat.save  testall.sh
test/pH2/: 1AKI.dry.md2.cpout  1AKI.dry.md4.cpout  1AKI.dry.md5.cpout
test/pH2.5/: 1AKI.dry.md4.cpout  1AKI.dry.md5.cpout
test/pH3/: 1AKI.dry.md2.cpout  1AKI.dry.md4.cpout
test/pH3.5/: 1AKI.dry.md2.cpout  1AKI.dry.md3.cpout  1AKI.dry.md5.cpout
test/pH4/: 1AKI.dry.md2.cpout
test/pH4.5/: 1AKI.dry.md2.cpout
test/pH5.5/: 1AKI.dry.md2.cpout  1AKI.dry.md3.cpout  1AKI.dry.md4.cpout
test/pH6/: 1AKI.dry.md3.cpout
test/pH6.5/: 1AKI.dry.md3.cpout  1AKI.dry.md4.cpout
test/pH7/: 1AKI.dry.md2.cpout  1AKI.dry.md3.cpout
test/pH7.5/: 1AKI.dry.md2.cpout  1AKI.dry.md3.cpout  1AKI.dry.md5.cpout
test_ph/: chunk.dat.save  chunk_deprot.dat.save  conditional.dat.save  cumulative.dat.save  cumulative_deprot.dat.save  cumulative_pka.dat.save  md4_cpout.pH_7.50.save  pH_2.00.calcpka.diff  pH_2.50.calcpka.diff  pH_2.50.calcpka.save  pH_3.00.calcpka.diff  pH_3.00.calcpka.save  pH_3.50.calcpka.diff  pH_4.00.calcpka.diff  pH_4.50.calcpka.diff  pH_4.50.calcpka.save  pH_5.00.calcpka.diff  pH_5.50.calcpka.diff  pH_6.00.calcpka.diff  pH_6.00.calcpka.save  pH_6.50.calcpka.diff  pH_7.00.calcpka.diff  pH_7.00.calcpka.save  pH_7.50.calcpka.diff  pop.dat.save  running_avg.dat.save  testall.sh
test_ph/pH2/: 1AKI.dry.md3.cpout
test_ph/pH2.5/: 1AKI.dry.md2.cpout  1AKI.dry.md3.cpout
test_ph/pH3/: 1AKI.dry.md3.cpout  1AKI.dry.md5.cpout
test_ph/pH3.5/: 1AKI.dry.md4.cpout
test_ph/pH4/: 1AKI.dry.md3.cpout  1AKI.dry.md4.cpout  1AKI.dry.md5.cpout
test_ph/pH4.5/: 1AKI.dry.md3.cpout  1AKI.dry.md4.cpout  1AKI.dry.md5.cpout
test_ph/pH5/: 1AKI.dry.md2.cpout  1AKI.dry.md3.cpout  1AKI.dry.md4.cpout  1AKI.dry.md5.cpout
test_ph/pH5.5/: 1AKI.dry.md5.cpout
test_ph/pH6/: 1AKI.dry.md2.cpout  1AKI.dry.md4.cpout  1AKI.dry.md5.cpout
test_ph/pH6.5/: 1AKI.dry.md2.cpout  1AKI.dry.md5.cpout
test_ph/pH7/: 1AKI.dry.md4.cpout  1AKI.dry.md5.cpout
test_ph/pH7.5/: 1AKI.dry.md4.cpout
test_redox/: E_0.75.calceo.save  E_0.78.calceo.save  E_0.81.calceo.save  E_0.84.calceo.save  E_0.87.calceo.save  E_0.90.calceo.save  cestats_output.txt.save  chunk.dat.save  chunk_eo.dat.save  chunk_oxid.dat.save  conditional.dat.save  conditional_chunks.dat.save  cumulative.dat.save  cumulative_eo.dat.save  cumulative_oxid.dat.save  lys-iron.cein  md2_ceout.E_0.75000.save  md3_ceout.E_0.81000.save  md4_ceout.E_0.84000.save  md5_ceout.E_0.90000.save  pop.dat.save  running_Eo.dat.save  running_avg.dat.save  running_avgs.dat.save  testall.sh
test_redox/E0.75/: lys-iron.md2.ceout  lys-iron.md3.ceout  lys-iron.md4.ceout  lys-iron.md5.ceout
test_redox/E0.78/: lys-iron.md2.ceout  lys-iron.md3.ceout  lys-iron.md4.ceout  lys-iron.md5.ceout
test_redox/E0.81/: lys-iron.md2.ceout  lys-iron.md3.ceout  lys-iron.md4.ceout  lys-iron.md5.ceout
test_redox/E0.84/: lys-iron.md2.ceout  lys-iron.md3.ceout  lys-iron.md4.ceout  lys-iron.md5.ceout
test_redox/E0.87/: lys-iron.md2.ceout  lys-iron.md3.ceout  lys-iron.md4.ceout  lys-iron.md5.ceout
test_redox/E0.90/: lys-iron.md2.ceout  lys-iron.md3.ceout  lys-iron.md4.ceout  lys-iron.md5.ceout
